<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.meditationapp.MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/tree"/>

        <LinearLayout
            style="@style/SongStyle">

            <TextView
                style="@style/PlaylistNumberStyle"
                android:text="@string/playlist_number_1" />

            <TextView
                style="@style/PlaylistTextStyle"
                android:text="@string/playlist_5_min" />

            <ImageView
                style="@style/PlayStopImageStyle"
                android:src="@drawable/play_button"/>

        </LinearLayout>


        <LinearLayout
            style="@style/SongStyle">

            <TextView
                style="@style/PlaylistNumberStyle"
                android:text="@string/playlist_number_2" />

            <TextView
                style="@style/PlaylistTextStyle"
                android:text="@string/playlist_8_min" />

            <ImageView
                style="@style/PlayStopImageStyle"
                android:src="@drawable/play_button"/>

        </LinearLayout>


        <LinearLayout
            style="@style/SongStyle">

            <TextView
                style="@style/PlaylistNumberStyle"
                android:text="@string/playlist_number_3" />

            <TextView
                style="@style/PlaylistTextStyle"
                android:text="@string/playlist_15_min" />

            <ImageView
                style="@style/PlayStopImageStyle"
                android:src="@drawable/play_button"/>

        </LinearLayout>


        <LinearLayout
            style="@style/SongStyle">

            <TextView
                style="@style/PlaylistNumberStyle"
                android:text="@string/playlist_number_4" />

            <TextView
                style="@style/PlaylistTextStyle"
                android:text="@string/playlist_30_min" />

            <ImageView
                style="@style/PlayStopImageStyle"
                android:src="@drawable/play_button"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>
